Fis issue with bs4 collection spacing

--- a/css/stateRestore.bootstrap4.scss
+++ b/css/stateRestore.bootstrap4.scss
@@ -3,12 +3,14 @@
 div.dt-button-collection {
     div.dropdown-menu {
         padding-top: 0px;
-        padding-bottom: 4px;
+        padding-bottom: 6px;
+        padding-left: 4px;
+        padding-right: 4px;
 
         div.dt-btn-split-wrapper {
             margin-right: 2px;
             margin-left: 2px;
-            margin-top: 4px;
+            margin-top: 6px;
             width: 96% !important;
         }
     }
